Cargar Noticia Listo

--- a/Administracion/gestion.html
+++ b/Administracion/gestion.html
@@ -56,6 +56,7 @@
 						<li><a href="#">Usuarios</a></li>
 						<li><a href="gestion.html">Procesos De Gestión</a></li>
 						<li><a href="#">Tramitacion De Documentos</a></li>
+						<li><a href="foros.html">Foros</a></li>
 					</ul>
 				</div>
 			</article>
@@ -149,11 +150,11 @@
 					<ul id="listaGestion">
 						<li><a id="bloque" href="#"></a><a class="textoAbajo" href="#">Gestión De Fechas De Evaluaciones</a></li>
 						<li><a id="bloque2" href="#"></a><a class="textoAbajo" href="#">Gestión De Listados</a></li>
-						<li><a id="bloque3" href="#"></a><a class="textoAbajo" href="#">Gestión De Información Administrativa</a></li>
+						<li><a id="bloque3" href="gestionInformacionAdministrativa.html"></a><a class="textoAbajo" href="gestionInformacionAdministrativa.html">Gestión De Información Administrativa</a></li>
 						<li><a id="bloque4" href="gestionDeLibros.html"></a><a class="textoAbajo" href="gestionDeLibros.html">Gestión De Libros</a></li>
-						<li><a id="bloque5" href="#"></a><a class="textoAbajo" href="#">Gestión De Información Estudiantil</a></li>
+						<li><a id="bloque5" href="gestionInformacionEstudiantil.html"></a><a class="textoAbajo" href="gestionInformacionEstudiantil.html">Gestión De Información Estudiantil</a></li>
 						<li><a id="bloque6" href="#"></a><a class="textoAbajo" href="#">Recepción y Gestión De Solicitudes y Planificaciones</a></li>
-						<li><a id="bloque7" href="#"></a><a class="textoAbajo" href="#">Gestión De La Información De La Institución</a></li>
+						<li><a id="bloque7" href="gestionInformacionInstitucion.html"></a><a class="textoAbajo" href="gestionInformacionInstitucion.html">Gestión De La Información De La Institución</a></li>
 					</ul>
 				</div>			
 			</article>
