--- a/Administracion/gestionInformacionAdministrativa.html
+++ b/Administracion/gestionInformacionAdministrativa.html
@@ -149,10 +149,10 @@
 				<header><h3>Seleccionar Una Opción</h3></header>
 				<div id="contenidoNoticias" class="estiloGestionLibros">
 					<ul id="listaGestion">
-						<li><a id="iconoconsultar" class="registroC"></a><a class="textoAbajo" >Registro De Cancelación De Mensualidades</a></li>
-						<li><a id="iconomodificar" class="informA"></a><a class="textoAbajo" >Información Administrativa</a></li>
-						<li><a id="iconoconsultar" class="controlM"></a><a class="textoAbajo" >Control De Mensualidades</a></li>
-						<li><a id="iconomodificar" class="reportesC"></a><a class="textoAbajo" >Reporte</a></li>
+						<li><a class="registroC iconoconsultarclass"></a><a class="textoAbajo" >Registro De Cancelación De Mensualidades</a></li>
+						<li><a class="informA iconomodificarclass"></a><a class="textoAbajo" >Información Administrativa</a></li>
+						<li><a class="controlM iconoconsultarclass"></a><a class="textoAbajo" >Control De Mensualidades</a></li>
+						<li><a class="reportesC iconomodificarclass"></a><a class="textoAbajo" >Reporte</a></li>
 					</ul>					
 				</div>				
 			</article>
@@ -196,7 +196,7 @@
 					</div>
 					<div class="oodiv">
 						<div>NOTA: NO EFECTUAMOS DEVOLUCIÓN DE DINERO</div>
-						<div class="floatright">__________________________</div>
+						<div class="floatRight">__________________________</div>
 					</div>
 				</div>
 				<div class="displayInTop centrar">
