Laptop - this morning - you know

--- a/Administracion/gestion.html
+++ b/Administracion/gestion.html
@@ -153,7 +153,7 @@
 						<li><a id="bloque3" href="gestionInformacionAdministrativa.html"></a><a class="textoAbajo" href="gestionInformacionAdministrativa.html">Gestión De Información Administrativa</a></li>
 						<li><a id="bloque4" href="gestionDeLibros.html"></a><a class="textoAbajo" href="gestionDeLibros.html">Gestión De Libros</a></li>
 						<li><a id="bloque5" href="gestionInformacionEstudiantil.html"></a><a class="textoAbajo" href="gestionInformacionEstudiantil.html">Gestión De Información Estudiantil</a></li>
-						<li><a id="bloque6" href="#"></a><a class="textoAbajo" href="#">Recepción y Gestión De Solicitudes y Planificaciones</a></li>
+						<li><a id="bloque6" href="recepcionGestionSolicitudes.html"></a><a class="textoAbajo" href="recepcionGestionSolicitudes.html">Recepción y Gestión De Solicitudes</a></li>
 						<li><a id="bloque7" href="gestionInformacionInstitucion.html"></a><a class="textoAbajo" href="gestionInformacionInstitucion.html">Gestión De La Información De La Institución</a></li>
 					</ul>
 				</div>			
