--- a/Administracion/recepcionGestionSolicitudes.html
+++ b/Administracion/recepcionGestionSolicitudes.html
@@ -144,15 +144,8 @@
 				<hr />
 			</article>
 			<article id="noticias">
-				<header><h3>Seleccionar Una Opción</h3></header>
-				<div id="contenidoNoticias" class="estiloGestionLibros">
-					<ul id="listaGestion">
-						<li><a id="iconoconsultar" href="#"></a><a class="textoAbajo" href="#">Recepción De Solicitudes</a></li>
-						<li><a id="iconomodificar" href="#"></a><a class="textoAbajo" href="#">Gestión De Solicitudes</a></li>
-					</ul>							
-				</div>		
 				<!-- Contenidooooooooo -->
-				<article id="formularioIngresarLibro" class="margenLibro">
+				<article class="centrar margenLibroClass">
 					<header>
 						<h3>Consultar Las Solicitudes</h3>
 					</header>					
@@ -190,7 +183,7 @@
 					</form>								
 				</article>	
 
-				<article id="formularioIngresarLibro" class="margenLibro">
+				<article  class="centrar margenLibroClass">
 					<header>
 						<h3>Solicitudes</h3>
 					</header>
@@ -219,12 +212,6 @@
 						</tr>
 					</table>
 				</article>	
-				<!-- Gestion Solicitudes -->
-				<article id="formularioIngresarLibro" class="margenLibro">
-					<header>
-						<h3>Gestión De Solicitudes</h3>
-					</header>		
-				</article>
 			</article>
 
 		</div>
