--- a/Administracion/viewCalif.html
+++ b/Administracion/viewCalif.html
@@ -162,67 +162,67 @@
 					<tr>
 						<td class="centrar">01</td>
 						<td>SALAZAR INAGA, LUINDER JESUS</td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
+						<td class="centrar"><input type="text" class="inputOtroClass"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
 					</tr>
 
 					<tr>
 						<td class="centrar">02</td>
 						<td>PEREZ APONTE, DENGER JESUS</td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
 					</tr>
 
 					<tr>
 						<td class="centrar">03</td>
 						<td>CABRERA GONZALEZ, EDWARD</td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
-						<td class="centrar"><input class="inputOtro centrar"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass"type="text"></td>
 					</tr>
 				</table>	
 				<div class="centrar">
