--- a/Administracion/recepcionGestionSolicitudes.html
+++ b/Administracion/recepcionGestionSolicitudes.html
@@ -14,6 +14,7 @@
 	<script src="../js/swipe.min.js"></script>
 	<script src="../js/jquery.cookie.js"></script>
 	<script src="../js/admins.js"></script>
+	<script src="../js/gestionSolicitudes.js"></script>
 </head>
 <body class="p-admision">
 
@@ -149,41 +150,46 @@
 					<header>
 						<h3>Consultar Las Solicitudes</h3>
 					</header>					
-					<form id="formulario" action="" method="get" accept-charset="utf-8">
+					<div id="formulario">
 						<label id="nomLibro" name="nombreLibro">Consultar Por: </label>
-						<select>
-							<option>----------------------------</option>
-							<option>Tipo De Solicitud</option>
-							<option>Fecha</option>
-							<option>Estado De La solicitud</option>
-							<option>Todas</option>
+						<select id="tipoSolicitud">
+							<option value="1" class="centrar">----------------------------</option>
+							<option value="2" class="centrar">Tipo De Solicitud</option>
+							<option value="3" class="centrar">Fecha</option>
+							<option value="4" class="centrar">Estado De La solicitud</option>
+							<option value="5" class="centrar">Todas</option>
 						</select>
-						<div class="formSolicitud" id="tipoSolicitud">
-							<label name="TipoS">Seleccionar</label>
-							<select name="TipoS">
-								<option>-----------</option>
-								<option>Solicitud 1</option>
-								<option>Solicitud 2</option>
-								<option>Solicitud 3</option>
+						<div class="formSolicitud" id="sinNom">
+							<label  name="TipoS">Seleccionar</label>
+							<select id="tipoSoli" name="TipoS">
+								<option class="centrar">---------------------------------------</option>
+								<option class="centrar">Constancia de Buena Conducta</option>
+								<option class="centrar">Constancia de Estudio</option>
+								<option class="centrar">Constancia de Inscripcion</option>
+								<option class="centrar">Constancia de Notas</option>
+								<option class="centrar">Constancia de Permiso</option>
+								<option class="centrar">Constancia de Retiro</option>
+								<option class="centrar">Constancia de Sueldo</option>
+								<option class="centrar">Constancia de Trabajo</option>
 							</select>
 						</div>
 						<div class="formSolicitud" id="fechaSolicitud">
 							<label name="FechaS">Ingresar Fecha</label>
-							<input type="date" name="FechaS">
+							<input type="date" name="FechaS" id="FechaS2">
 						</div>
 						<div class="formSolicitud" id="estadoSolicitud">
 							<label name="EstadoS">Seleccionar</label>
-							<select name="EstadoS">
+							<select id="estadoSoli" name="EstadoS">
 								<option>---------------------</option>
 								<option>Por Responder</option>
 								<option>Respondida</option>
 							</select>
 						</div>
-						<button type="submit" class="formSolicitud">Consultar</button>
-					</form>								
+						<button type="button" id="buscarSolicitud" class="formSolicitud">Consultar</button>
+					</div>								
 				</article>	
 
-				<article  class="centrar margenLibroClass">
+				<article  class="centrar margenLibroClass" id="mostrarSoli">
 					<header>
 						<h3>Solicitudes</h3>
 					</header>
@@ -196,28 +202,12 @@
 								<td>Estatus</td>
 							</tr>
 						</thead>
-						<tr>
-							<td>13090</td>
-							<td>Constancia De Inscripción</td>
-							<td>29/09/2012</td>
-							<td>Repondida - 08/10/2009</td>
-							<td><a href="#">>></a></td>
-						</tr>
-						<tr>
-							<td>13090</td>
-							<td>Constancia De Inscripción</td>
-							<td>29/09/2012</td>
-							<td>Repondida - 08/10/2009</td>
-							<td><a href="#">>></a></td>
-						</tr>
 					</table>
 				</article>	
 			</article>
 
 		</div>
 	</section>
-
-
 
 <footer class="site-footer" role="contentinfo">
 	<div class="site-info">
