lo que se arreglo en la mañana

--- a/Administracion/recepcionGestionSolicitudes.html
+++ b/Administracion/recepcionGestionSolicitudes.html
@@ -202,7 +202,11 @@
 								<td>Estatus</td>
 							</tr>
 						</thead>
+						<tbody id="tbodyGS">
+						</tbody>
 					</table>
+					<div id='divGS'>
+					</div>
 				</article>	
 			</article>
 
